hardcoded movie API impl
