# src/main/java/be/houbrechtsit/awsserverless/MovieAPILambda.java
@@ -12,6 +12,8 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
 
+import static java.util.Collections.singletonList;
+
 public class MovieAPILambda {
     public static final String HTTP_METHOD = "httpMethod";
     public static final String BODY = "body";
@@ -25,13 +27,84 @@ public class MovieAPILambda {
     public static final String MOVIE_ID_PATH_PARAMETER = "movieId";
     public static final String PATH_PARAMETERS = "pathParameters";
 
+//    private MovieRepository movieRepository = MovieRepository.geInstance();
+
+    private Movie movie = new Movie("c1b65747-69c0-4dbb-99ae-9c225c6cd462", "The Shawshank Redemption", "Frank Darabont", 1994);
 
     public ProxyResponse handleRequest(Map<String, Object> request, Context context) {
         LambdaLogger logger = context.getLogger();
         logger.log("request: " + new Gson().toJson(request));
         logger.log("context: " + new Gson().toJson(context));
 
-        return handleInfoRequest(request, context);
+        String resource = (String) request.get("resource");
+        if ("/v1/info".equals(resource)) {
+            return handleInfoRequest(request, context);
+        } else {
+            return handleMovieRequest(request, context);
+        }
+//        return new ProxyResponse(404, null, null);
+    }
+
+    private ProxyResponse handleMovieRequest(Map<String, Object> request, Context context) {
+        String movieId = getMovieId(request);
+        String httpMethod = (String) request.get(HTTP_METHOD);
+        String body = (String) request.get(BODY);
+
+        if (movieId == null) {
+            if (GET.equals(httpMethod)) {
+                return getMovies();
+            } else if (POST.equals(httpMethod)) {
+                return createMovie(gson.fromJson(body, Movie.class));
+            }
+            return methodNotAllowed();
+        } else {
+            if (GET.equals(httpMethod)) {
+                return getMovie(movieId);
+            } else if (PUT.equals(httpMethod)) {
+                return updateMovie(movieId, gson.fromJson(body, Movie.class));
+            } else if (DELETE.equals(httpMethod)) {
+                return deleteMovie(movieId);
+            }
+            return methodNotAllowed();
+        }
+    }
+
+    private ProxyResponse getMovies() {
+//        return new ProxyResponse(200, null, gson.toJson(movieRepository.list()));
+        return new ProxyResponse(200, null, gson.toJson(singletonList(movie)));
+    }
+
+    private ProxyResponse createMovie(Movie movie) {
+//        movieRepository.saveOrUpdate(movie);
+        return new ProxyResponse(200, null, gson.toJson(movie));
+    }
+
+    private ProxyResponse getMovie(String movieId) {
+//        return new ProxyResponse(200, null, gson.toJson(movieRepository.load(movieId)));
+        return new ProxyResponse(200, null, gson.toJson(movie));
+    }
+
+    private ProxyResponse updateMovie(String movieId, Movie movie) {
+//        movieRepository.saveOrUpdate(movie);
+        return new ProxyResponse(200, null, gson.toJson(movie));
+    }
+
+    private ProxyResponse deleteMovie(String movieId) {
+//        movieRepository.delete(new Movie(movieId, null, 0));
+        return new ProxyResponse(204, null, null);
+    }
+
+    private ProxyResponse methodNotAllowed() {
+        return new ProxyResponse(405, null, "{\"error\":\"method not allowed\"}");
+    }
+
+    private String getMovieId(Map<String, Object> request) {
+        @SuppressWarnings("unchecked")
+        Map<String, String> pathParameters = (Map<String, String>) request.get(PATH_PARAMETERS);
+        if (pathParameters != null) {
+            return pathParameters.get(MOVIE_ID_PATH_PARAMETER);
+        }
+        return null;
     }
 
     private ProxyResponse handleInfoRequest(Map<String, Object> request, Context context) {
